--- a/app/views/know_your_footprint/show.html.erb
+++ b/app/views/know_your_footprint/show.html.erb
@@ -3,12 +3,10 @@
 <section class="section-padding">
   <div class="section-gutter t:flex t:items-center t:justify-between">
     <div class="t:w-3/5 d-lg:w-1/2 space-y-6">
-      <h1 class="heading-xl">Know your carbon footprint</h1>
-      <p>
-        GoClimate fights climate catastrophe by reducing greenhouse gas emissions, whilst centring climate justice and operating with 100% transparency. As a community, we finance effective climate projects that build a foundation for a sustainable future. 
-      </p>
+      <h1 class="heading-xl"><%= t 'views.know_your_footprint.show.heading' %></h1>
+      <p><%= t 'views.know_your_footprint.show.description' %></p>
       <div class="callout max-w-xl mx-auto t:mx-0">
-        <p class="text-center font-bold">Take the test and start your journey towards a more climate friendly life</p>
+        <p class="text-center font-bold"><%= t 'views.know_your_footprint.show.cta' %></p>
         <div>
           <%= form_with url: new_lifestyle_footprint_path, method: :get, class: 'm-lg:flex m-lg:justify-center mt-3', id: 'first-registration-form' do |f| %>
             <%= f.hidden_field 'campaign', value: 'know-your-carbon-footprint' %>
@@ -43,10 +41,9 @@
 <section class="section-padding">
   <div class="section-gutter t:flex t:flex-row-reverse t:items-center t:justify-between">
     <div class="t:w-3/5 d-lg:w-1/2 space-y-6">
-      <h2 class="heading-lg">What is a carbon footprint?</h2>
+      <h2 class="heading-lg"><%= t 'views.know_your_footprint.show.what_is_a_carbon_footprint.heading' %></h2>
       <div class="space-y-3">
-        <p>We all have an individual carbon footprint, as pretty much everything we do emits CO2 (carbon dioxide). Even though a lot of responsibility lies on large companies and governments, we need to come together in order to make a change and create a way of living that doesn’t harm the planet. The average of someone living in the Global North is 10 tonnes/year. We need to cut this number in half every decade to stay reasonably safe from further climate catastrophe.</p>
-        <p>Main areas to look at in terms of your carbon footprint are home, diet, travelling, shopping and public consumption. By signing up with GoClimate you will be able to get a better idea of which of your lifestyle choices emit the most CO2 today, as well as get support in reducing it over time.</p>
+        <%= t 'views.know_your_footprint.show.what_is_a_carbon_footprint.text' %>
       </div>
     </div>
     <div class="t:w-2/5 d-lg:w-1/2">
@@ -61,8 +58,8 @@
 <section class="section-padding">
   <div class="section-gutter t:flex t:items-center t:justify-between">
     <div class="t:w-3/5 d-lg:w-1/2 space-y-6">
-      <h2 class="heading-lg">System change and behavioral change</h2>
-      <p>Big corporations and governments are responsible for national policies and collective emissions, but as individuals, we are also responsible for a share in all of this. If we all join forces, we can both reduce emissions on an individual and collective level, as well as exert pressure on governments to improve legislation. This is not an either/or situation, we need to do everything - drive system change AND change our own behavior!</p>
+      <h2 class="heading-lg"><%= t 'views.know_your_footprint.show.system_change.heading' %></h2>
+      <p><%= t 'views.know_your_footprint.show.system_change.text' %></p>
     </div>
     <div class="t:w-2/5 d-lg:w-1/2">
       <div class="relative mx-auto w-3/4 m-lg:w-1/2 t:w-full max-w-lg">
@@ -76,8 +73,9 @@
 <section class="section-padding">
   <div class="section-gutter t:flex t:flex-row-reverse t:items-center t:justify-between">
     <div class="t:w-3/5 d-lg:w-1/2 space-y-6">
-      <h2 class="heading-lg">Global North vs Global South</h2>
-      <p>The carbon footprint of someone living in the Global North is so much higher than that of the average individual living in the Global South. Therefore, those of us who are privileged enough to have a choice to make changes, need to act now to get our emissions down.</p>
+      <h2 class="heading-lg"><%= t 'views.know_your_footprint.show.global_north_south.heading' %></h2>
+      <p><%= t 'views.know_your_footprint.show.global_north_south.text' %></p>
+      <p><%= t 'views.know_your_footprint.show.global_north_south.text_2' %></p>
     </div>
     <div class="t:w-2/5 d-lg:w-1/2">
       <div class="relative mx-auto w-3/4 m-lg:w-1/2 t:w-full max-w-lg">
@@ -88,13 +86,32 @@
   </div>
 </section>
 
+
+<section class="section-padding">
+  <h2 class="heading-lg"><%=t 'views.projects.latest_projects' %></h2>
+
+  <div class="mt-12 flex flex-col d:flex-row section-gutter">
+    <% @projects.take(3).each do |project| %>
+      <div class="d:w-1/3 pt-20 m-lg:pt-24">
+        <div class="callout h-full space-y-3 pt-0">
+          <div class="inline-block w-full">
+            <img class="mx-auto h-40 w-40 -mt-20 m-lg:h-48 m-lg:w-48 m-lg:-mt-24 rounded-full object-cover" src="<%= project.image_url %>">
+          </div>
+          <h3 class="heading"><%= project.name %></h3>
+          <%= simple_format(project.short_description) %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</section>
+
 <section class="section-padding">
   <div class="section-gutter t:flex t:items-center t:justify-between">
     <div class="t:w-3/5 d-lg:w-1/2 space-y-6">
-      <h2 class="heading-lg">Join us!</h2>
-      <p>As a community, we finance effective climate projects that build a foundation for a sustainable future. We only support Gold standard certified climate projects to ensure your money makes as much of a difference as possible.</p>
+      <h2 class="heading-lg"><%= t 'views.know_your_footprint.show.sign_up.heading' %></h2>
+      <p><%= t 'views.know_your_footprint.show.sign_up.text' %></p>
       <div class="callout max-w-xl mx-auto t:mx-0">
-        <p class="text-center font-bold">Take the test and start your journey towards a more climate friendly life</p>
+        <p class="text-center font-bold"><%= t 'views.know_your_footprint.show.cta' %></p>
         <div>
           <%= form_with url: new_lifestyle_footprint_path, method: :get, class: 'm-lg:flex m-lg:justify-center mt-3' do |f| %>
             <%= f.hidden_field 'campaign', value: 'know-your-carbon-footprint' %>
@@ -127,28 +144,6 @@
 </section>
 
 <%= render 'shared/more_info', pages: [:about, :transparency] %>
-
-<section class="section-padding">
-  <h2 class="heading-lg"><%=t 'views.projects.latest_projects' %></h2>
-
-  <div class="mt-12 flex flex-col d:flex-row section-gutter">
-    <% @projects.take(3).each do |project| %>
-      <div class="d:w-1/3 pt-20 m-lg:pt-24">
-        <div class="callout h-full space-y-3 pt-0">
-          <div class="inline-block w-full">
-            <img class="mx-auto h-40 w-40 -mt-20 m-lg:h-48 m-lg:w-48 m-lg:-mt-24 rounded-full object-cover" src="<%= project.image_url %>">
-          </div>
-          <h3 class="heading"><%= project.name %></h3>
-          <%= simple_format(project.short_description) %>
-        </div>
-      </div>
-    <% end %>
-  </div>
-
-  <div class="mt-12 text-center">
-    <%= link_to t('views.projects.see_all'), projects_path, class: 'button' %>
-  </div>
-</section>
 
 <%= render "shared/bottom_landscape" %>
 <%= render 'shared/footer', skip_prefooter: true %>
