Replace team image with illustration

--- a/app/views/about/show.html.erb
+++ b/app/views/about/show.html.erb
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="t:w-1/2">
-      <%= image_tag webpack_asset_path('images/about/team.jpg'), class: 'w-full rounded' %>
+      <%= image_tag webpack_asset_path('images/illustrations/planet.png'), class: 'w-3/4 t:w-auto t:max-w-sm mx-auto' %>
     </div>
   </div>
 </section>
