Add FAQ question about indigenous people to sign up page

--- a/app/views/devise/registrations/_footer.html.erb
+++ b/app/views/devise/registrations/_footer.html.erb
@@ -46,6 +46,7 @@
         "offsetting.questions.q3",
         "offsetting.questions.q6",
         "offsetting.questions.q9",
+        "offsetting.questions.q11",
         "our_service.questions.q1",
         "our_service.questions.q3",
         "our_service.questions.q4",
