Update 'Why do we exist' copy on about us page

--- a/app/views/about/show.html.erb
+++ b/app/views/about/show.html.erb
@@ -145,6 +145,7 @@ Lyssna på Cissi i <a href="https://klimatpodden.se/66-cecilia-linden-klimatkomp
           <%=t 'about_us_why_do_we_exist' %>
         </h2>
         <p><%=t 'about_us_why_do_we_exist_text' %></p>
+        <p><%=t 'about_us_why_do_we_exist_text_2' %></p>
       </div>
     </div>
     <div class="d:w-1/2">
