Update copy on Projects page

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -194,7 +194,7 @@
   </section>
 
   <section class="section-padding">
-    <h2 class="heading-lg"><%=t 'views.projects.latest_projects' %></h2>
+    <h2 class="heading-lg"><%=t 'views.projects.current_projects' %></h2>
 
     <div class="mt-12 flex flex-col d:flex-row section-gutter">
       <% @projects.take(3).each do |project| %>
