--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <section class="section-padding">
-  <h2 class="heading-xl"><%=t 'views.projects.latest_projects' %></h2>
+  <h2 class="heading-xl"><%=t 'views.projects.current_projects' %></h2>
 
   <div class="mt-12 flex flex-col d:flex-row section-gutter">
     <% @projects.take(3).each do |project| %>
