--- a/app/views/pdfs/gift_card.html.erb
+++ b/app/views/pdfs/gift_card.html.erb
@@ -8,8 +8,6 @@
 <html>
   <head>
     <meta charset='utf-8' />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
     <!--
       Best to embed the css here because PDF generating is done by a separate tool (wkhtmltopdf)
@@ -19,8 +17,10 @@
       /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
       html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,[type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{-webkit-appearance:textfield;outline-offset:-2px}[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
 
-      body {
-        font-family: 'Inter', 'Arial', sans-serif;
+      @import url('https://rsms.me/inter/inter.css');
+      html { font-family: 'Inter', sans-serif; }
+      @supports (font-variation-settings: normal) {
+        html { font-family: 'Inter var', sans-serif; }
       }
 
       /* utility classes based on our tailwind config */
@@ -102,7 +102,7 @@
       <!-- table for a clean row of items -->
       <table class="w-full">
         <tr>
-          <td class="w-1/3 align-top">
+          <td class="w-1/3 align-middle">
             <%= image_tag wicked_pdf_file_base64('app/assets/images/logo.svg'), width: "100" %>
           </td>
           <td class="w-1/3 text-center relative align-middle">
@@ -123,7 +123,7 @@
               </span>
             </div>
           </td>
-          <td class="w-1/3 text-right text-sm align-top">
+          <td class="w-1/3 text-right text-sm align-middle">
             <% if @example == true %>
               GCN-GIFT-EXAMPLE
             <% else %>
@@ -168,9 +168,13 @@
       </p>
     </article>
 
-    <footer class="mx-auto" style="width: 600px">
+    <footer class="mx-auto">
       <p class="text-center text-sm pb-0 mb-0">
-        <%= raw(t('views.gift_cards.download.about').gsub('<a ', '<a class="link" target="_blank" ')) %>
+        <%= raw(t('views.gift_cards.download.about',
+                    co2: number_with_delimiter(@gift_card.co2e.tonnes),
+                    country: @gift_card.country&.translations[I18n.locale.to_s] || @gift_card.country,
+                    time_period: @gift_card.number_of_months == 1 ? t('views.gift_cards.download.one_month') : t('views.gift_cards.download.x_months', count: @gift_card.number_of_months)
+                  ).gsub('<a ', '<a class="link" target="_blank" ')) %>
       </p>
     </footer>
   </body>
