--- a/app/views/business/show.html.erb
+++ b/app/views/business/show.html.erb
@@ -1,15 +1,37 @@
 <%= render "shared/header" %>
 
-<section class="section-padding">
-  <h1 class="heading-xl"><%= title(t('welcome.business.for_companies')) %></h1>
-  <p class="mt-6 t:w-2/3 d:w-1/2"><%= description(t('welcome.business.for_companies_text_html')) %></p>
+<section class="section-padding t:py-32">
+  <div class="section-gutter t:flex flex-row items-center">
+    <div class="t:w-1/2 d:w-3/5 space-y-6">
+      <h1 class="heading-xl"><%= t 'views.business.hero.heading' %></h1>
+      <p><%= t 'views.business.hero.text' %></p>
+    </div>
+    <div class="t:w-1/2 d:w-2/5">
+      <div class="relative mx-auto m-lg:w-2/3 t:w-full max-w-md
+        bg-white rounded-lg shadow-lg p-4 border border-gray-tint-2
+        t:bg-transparent t:shadow-none t:p-0 t:border-none">
+        <%= image_tag webpack_asset_path('images/shapes/blob_3.svg'), class: 'hidden t:block w-full absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2', alt: '' %>
+        <div class="relative t:w-2/3 t:mx-auto space-y-3">
+          <h3 class="text-center heading"><%= t 'views.business.our_offer.heading' %></h3>
+          <ul class="list-check space-y-2">
+            <li><%= t 'views.business.our_offer.bullet_1' %></li>
+            <li><%= t 'views.business.our_offer.bullet_2' %></li>
+            <li><%= t 'views.business.our_offer.bullet_3' %></li>
+          </ul>
+        </div>
+      </div>
+    </div>
 </section>
 
-<section class="section-padding">
-  <div class="callout">
-    <h2 class="heading-lg mb-6 text-center"><%=t 'welcome.business.customers_we_work_with' %></h2>
+<div class="bg-white">
+  <section class="section-padding">
+    <h2 class="heading-lg mb-6 text-center"><%=t 'views.business.customers.heading' %></h2>
     <div class="flex flex-col items-center t:flex-row t:flex-wrap">
       <% [
+        {
+          alt: 'wedonthavetime',
+          img_url: 'images/companies/wdht.png',
+        },
         {
           alt: 'norrsken',
           img_url: 'images/companies/norrsken.png',
@@ -17,14 +39,6 @@
         {
           alt: 'netlight',
           img_url: 'images/companies/netlight.png',
-        },
-        {
-          alt: 'mentimeter',
-          img_url: 'images/companies/mentimeter.png',
-        },
-        {
-          alt: 'wedonthavetime',
-          img_url: 'images/companies/wdht.png',
         },
         {
           alt: 'blocket',
@@ -35,67 +49,107 @@
           img_url: 'images/companies/breakit.png',
         }
       ].each do |partner| %>
-        <div class="t:w-1/3 px-8 py-4">
+        <div class="w-1/3 t:w-1/5 t:px-8 py-4">
           <%= image_tag webpack_asset_path(partner[:img_url]), width: "300", alt: partner[:alt] %>
         </div>
       <% end %>
+    </div>
+  </section>
+</div>
+
+<section class="section-padding">
+  <div class="section-gutter t:flex flex-row-reverse items-center">
+    <div class="t:w-1/2 d:w-2/3">
+      <h2 class="heading-lg"><%= t 'views.business.carbon_offsetting.heading' %></h2>
+      <p class="my-6"><%= t 'views.business.carbon_offsetting.text' %></p>
+      <%= link_to I18n.t('views.business.carbon_offsetting.cta'),
+        new_business_climate_report_path, class: 'button button-cta', id: 'calculate-business-footprint-cta' %>
+    </div>
+    <div class="t:w-1/2 d:w-1/3">
+      <div class="relative mx-auto w-3/4 m-lg:w-1/2 t:w-full max-w-lg">
+        <%= image_tag webpack_asset_path('images/shapes/blob_2.svg'), class: 'w-full absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2', alt: '' %>
+        <%= image_tag webpack_asset_path('images/illustrations/carbon_footprint_bar_chart.png'), class: 'w-full relative', alt: '' %>
+      </div>
     </div>
   </div>
 </section>
 
 <section class="section-padding">
   <div class="section-gutter t:flex flex-row items-center">
-    <div class="t:w-1/2">
-      <h2 class="heading-lg"><%= t 'welcome.business.calculate_footprint' %></h2>
-      <p class="my-6"><%= t('welcome.business.calculate_footprint_html').gsub('<a', '<a class="link"').html_safe %></p>
-      <%= link_to I18n.t('welcome.business.calculate_footprint_button'), 
+    <div class="t:w-1/2 d:w-2/3">
+      <h2 class="heading-lg"><%= t 'views.business.climate_report.heading' %></h2>
+      <p class="my-6"><%= t 'views.business.climate_report.text' %></p>
+      <%= link_to I18n.t('views.business.climate_report.cta'),
         new_business_climate_report_path, class: 'button button-cta' %>
     </div>
-    <div class="t:w-1/2">
-      <%= image_tag webpack_asset_path('images/illustrations/save_the_planet.png'), class: 'mx-auto', alt: '' %>
+    <div class="t:w-1/2 d:w-1/3">
+      <div class="callout mx-auto m-lg:w-2/3 t:w-full max-w-lg">
+        <%= image_tag webpack_asset_path('images/climate_report.png'), class: 'w-full relative', alt: '' %>
+      </div>
     </div>
   </div>
 </section>
 
 <section class="section-padding">
   <div class="section-gutter t:flex t:flex-row-reverse items-center">
-    <div class="t:w-1/2">
-      <h2 class="heading-lg"><%=t 'welcome.business.offset_employees' %></h2>
-      <p class="my-6"><%=t 'welcome.business.offset_employees_html' %></p>
-      <div class="callout" data-controller="business--offset-calculator" data-cost-per-tonne="<%= @cost_per_tonne %>">
+    <div class="t:w-1/2 d:w-2/3">
+      <h2 class="heading-lg"><%= t 'views.business.offset_employees.heading' %></h2>
+      <p class="my-6">
+        <%= t 'views.business.offset_employees.text' %>
+      </p>
+    </div>
+    <div class="t:w-1/2 d:w-1/3">
+      <div class="callout mx-auto m-lg:w-2/3 t:w-full max-w-lg"
+        data-controller="business--offset-calculator"
+        data-cost-per-tonne="<%= @cost_per_tonne %>"
+      >
         <p class="heading-lg text-center">
-          <%= current_region.currency.prefix %><span data-target="business--offset-calculator.costLabel"></span><%= current_region.currency.suffix %>/month
+          <%= current_region.currency.prefix %><span data-target="business--offset-calculator.costLabel"></span><%= current_region.currency.suffix %>/<%= t 'months.one' %>
         </p>
-        <p class="text-sm text-center"><%=t 'welcome.business.equivalent_co2_offset' %></p>
+        <p class="text-sm text-center"><%=t 'views.business.offset_employees.equivalent_co2_offset' %></p>
 
         <%= form_tag(business_contacts_path, class: 'my-3') do %>
           <div class="text-center">
-            <%= label_tag(:number_of_employees, t('welcome.business.number_of_employees'), class: 'font-bold') %>
+            <%= label_tag(:number_of_employees, t('views.business.offset_employees.number_of_employees'), class: 'font-bold') %>
             <div>
               <%= number_field_tag :number_of_employees, '10', class: 'input w-full d:w-auto', min: 1, required: true, 'data-action': 'business--offset-calculator#update', 'data-target': 'business--offset-calculator.employeesField' %>
             </div>
           </div>
           <div class="text-center mt-1">
-            <%= label_tag(:email, t('welcome.business.your_email'), class: 'font-bold') %>
+            <%= label_tag(:email, t('views.business.offset_employees.email'), class: 'font-bold') %>
             <div>
               <%= email_field_tag :email, '', class: 'input w-full d:w-auto', required: true %>
             </div>
           </div>
           <div class="mt-3 text-center">
-              <button type="submit" class="button button-cta w-full d:w-auto"><%=t 'welcome.business.im_interested' %>!</button>
+              <button type="submit" class="button button-cta w-full d:w-auto"><%=t 'views.business.offset_employees.cta' %></button>
           </div>
         <% end %>
       </div>
-    </div>
-    <div class="t:w-1/2">
-      <%= image_tag webpack_asset_path('images/illustrations/describe_lifestyle.png'), class: 'mx-auto', alt: '' %>
     </div>
   </div>
 </section>
 
 <section class="section-padding">
-  <h2 class="heading-lg"><%=t 'welcome.business.other_offsetting' %></h2>
-  <p class="mt-6 t:w-2/3 d:w-1/2"><%=t('welcome.business.other_offsetting_html').gsub('<a', '<a class="link"').html_safe %></p>
+  <div class="section-gutter t:flex flex-row items-center">
+    <div class="t:w-1/2 d:w-2/3">
+      <h2 class="heading-lg"><%= t 'views.business.past_emissions.heading' %></h2>
+      <p class="my-6"><%= t 'views.business.past_emissions.text' %></p>
+      <%= link_to I18n.t('views.business.past_emissions.cta'),
+        new_business_climate_report_path, class: 'button button-cta' %>
+    </div>
+    <div class="t:w-1/2 d:w-1/3">
+      <div class="relative mx-auto w-3/4 m-lg:w-1/2 t:w-full max-w-lg">
+        <%= image_tag webpack_asset_path('images/shapes/blob_3.svg'), class: 'w-full absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2', alt: '' %>
+        <%= image_tag webpack_asset_path('images/illustrations/transparency.png'), class: 'w-full relative', alt: '' %>
+      </div>
+    </div>
+  </div>
 </section>
 
-<%= render 'shared/footer' %>
+<section class="section-padding t:text-center">
+  <h2 class="heading-lg"><%=t 'views.business.other_services.heading' %></h2>
+  <p class="mt-6 t:w-2/3 d:w-1/2 mx-auto"><%=t('views.business.other_services.text_html').gsub('<a', '<a class="link"').html_safe %></p>
+</section>
+<%= render 'shared/bottom_landscape' %>
+<%= render 'shared/footer', skip_prefooter: true %>
