Add views for adding business calculator
Co-authored-by: Stefan Lindbohm <stefan@goclimate.com>

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -48,6 +48,9 @@
             <li<% if controller_name == 'flight_batch' %> class="active"<% end %>>
               <%= link_to 'Flight Batch', new_admin_flight_batch_path %></a>
             </li>
+            <li<% if controller_name == 'business_calculators' %> class="active"<% end %>>
+              <%= link_to 'Business Calculators', admin_business_calculators_path %></a>
+            </li>
           </ul>
         </div>
       </div>
