Functionality for destroying business calculators, fields and categories

--- a/app/views/admin/business_calculators/_add_field.html.erb
+++ b/app/views/admin/business_calculators/_add_field.html.erb
@@ -3,7 +3,7 @@
     <div class="hidden" data-target="add-business-calculator-field.template" style="">
       <div class="row" style="padding-top: 0.5em">
         <div class="col-sm-8">
-          <%= field_fields.label :field_label, class: 'add-business-calculator-field-label-field'%>
+          <%= field_fields.label :question, class: 'add-business-calculator-field-label-field'%>
           <%= field_fields.text_field :label, class: 'form-control add-business-calculator-field-input-field' %>
         </div>
         <div class="col-sm-4">
