--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -62,6 +62,12 @@
                 <li<% if controller_name == 'climate_reports' %> class="active"<% end %>>
                   <%= link_to 'Climate Reports', admin_climate_reports_path %></a>
                 </li>
+                <li<% if controller_name == 'data_requests' %> class="active"<% end %>>
+                  <%= link_to 'Data requests', admin_data_requests_path %></a>
+                </li>
+                <li<% if controller_name == 'data_reporters' %> class="active"<% end %>>
+                  <%= link_to 'Data reporters', admin_data_reporters_path %></a>
+                </li>
               </ul>
             </div>
           </div>
