--- a/app/views/admin/business_calculators/index.html.erb
+++ b/app/views/admin/business_calculators/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Status</th>
       <th>Updated</th>
       <th></th>
     </tr>
@@ -15,11 +16,19 @@
     <% @calculators.each do |calculator| %>
       <tr>
         <td><%= calculator.name %></td>
+        <td><%= calculator.status %></td>
         <td><%= time_tag(calculator.updated_at, format: '%F %R') %></td>
         <td class="admin-actions">
           <%= link_to 'Show', [:admin, calculator] %> &nbsp;
-          <%= link_to 'Edit', edit_admin_business_calculator_path(calculator) %> &nbsp;
-          <%= link_to 'Destroy', [:admin, calculator], method: :delete, data: { confirm: 'Are you sure?' } %>
+          <% if calculator.draft? %>
+            <%= link_to 'Edit', edit_admin_business_calculator_path(calculator) %> &nbsp;
+          <% end %>
+          <% unless calculator.archived? %>
+            <%= link_to 'Archive', archive_admin_business_calculator_path(calculator), method: :post, data: { confirm: 'Are you sure? You can no longer edit or use this calculator.' } %> &nbsp;
+          <% end %>
+          <% if calculator.draft? %>
+            <%= link_to 'Publish', publish_admin_business_calculator_path(calculator), method: :post, data: { confirm: 'Are you sure? You can no longer edit this calculator.' } %> &nbsp;
+          <% end %>
         </td>
       </tr>
     <% end %>
