--- a/app/views/welcome_mailer/welcome_email.text.erb
+++ b/app/views/welcome_mailer/welcome_email.text.erb
@@ -17,4 +17,4 @@ Twitter: https://twitter.com/GoClimateHQ
 <%=t 'mailers.welcome.thank_you' %>
 
 <%=t 'best_regards' %>,
-<%=t 'mailers.welcome.the_gcn_team' %>
+<%=t 'mailers.welcome.the_gcn_team', name: "Tove" %>
