--- a/app/views/shared/email/_paragraph.html.erb
+++ b/app/views/shared/email/_paragraph.html.erb
@@ -2,7 +2,7 @@
   <tbody>
     <tr>
       <td style="text-align:inherit; line-height:24px; padding:0px 24px 0px 24px;" height="100%" valign="top" bgcolor="" role="module-content"><div><div style="font-family: inherit; text-align: inherit">
-        <%= text %>
+        <%= text.html_safe %>
       </div><div></div></div></td>
     </tr>
   </tbody>
