Collective efficacy and impact test in sign up flow

--- a/app/views/devise/registrations/_chart_world_comparison.html.erb
+++ b/app/views/devise/registrations/_chart_world_comparison.html.erb
@@ -40,3 +40,9 @@
     <%= t("views.registrations.your_climate_footprint", **footprint_text_options) %>
   <% end %>
 </p>
+<% if experiment_active?(:impact) %>
+  <p class="font-bold">
+    <%= t("views.registrations.impact_test") %>
+  </p>
+<% end %>
+
